Ajustes nos outros casos de uso e na docoumentacao do swagger
